--- a/Android/.project
+++ b/Android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>My Application</name>
+	<name>Flash</name>
 	<comment>Project Android created by Buildship.</comment>
 	<projects>
 	</projects>
